@@ -31,13 +31,13 @@ public class TexturedBlockModel {
   private static final AABB block = new AABB(0, 1, 0, 1, 0, 1);
 
   /**
-   * Find intersection between ray and block
+   * Find intersection between a ray and a block.
+   * The ray origin is updated to the intersection point.
    *
-   * @param ray     ray to test
    * @param texture array of textures for each side of the block.
    * Texture 0 is north, 1 is south, 2 is west,
    * 3 is east, 4 is top, 5 is bottom.
-   * @return <code>true</code> if the ray intersected the block
+   * @return <code>true</code> if the ray intersects the block
    */
   public static boolean intersect(Ray ray, Texture[] texture) {
     ray.t = Double.POSITIVE_INFINITY;
